Prevent horizontal scrolling.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,6 +14,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-size: $base-font-size;
   line-height: 1.6363;
